# FYP_SLAM

./: .cursorignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LocalMapTimeStats.txt  README.md  TODO.md  deploy_to_remote.sh  receive_from_remote.sh  toolchain-kr260.cmake
ORBSLAM3/: .gitignore  CMakeLists.txt
ORBSLAM3/Examples/Monocular/: EuRoC.yaml  EuRoC_Dummy.yaml  IP.yaml  Webcam.yaml  ip_cam_superpoint.cpp  mono_euroc.cc  mono_euroc_pipelined.cc  mono_euroc_pipelined_dummy.cc  mono_euroc_superpoint.cc  webcam_superpoint.cpp
ORBSLAM3/Examples/Monocular/EuRoC_TimeStamps/: MH01.txt  MH01_.txt
ORBSLAM3/include/: Config.h  Frame.h  GlobalFeatureExtractorType.h  KeyFrame.h  LoopClosing.h  MatchVisualizer.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  SerializationUtils.h  Settings.h  System.h  Tracking.h
ORBSLAM3/include/FeatureExtractors/: FeatureExtractorBase.h  FeatureExtractors.h  ORBextractor.h  SIFTextractor.h
ORBSLAM3/include/FeatureExtractors/Dummy/: DummyAdapter.h  Dummyextractor.h  FeatureIO.h
ORBSLAM3/include/PipelinedFE/: BasePipelinedProcess.h  DummyPipelinedProcess.h  ORBPipelinedProcess.h  PipelinedProcessFactory.h  SuperPointPipelinedProcess.h
ORBSLAM3/include/utils/: FeatureExtractorTypes.h  ThreadSafeQueue.h
ORBSLAM3/src/: Frame.cc  G2oTypes.cc  GlobalFeatureExtractorType.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  MapPoint.cc  MatchVisualizer.cc  ORBmatcher.cc  Optimizer.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc
ORBSLAM3/src/FeatureExtractors/: ORBextractor.cc  SIFTextractor.cc
ORBSLAM3/src/FeatureExtractors/Dummy/: DummyAdapter.cpp  Dummyextractor.cc  FeatureIO.cpp
ORBSLAM3/src/PipelinedFE/: DummyPipelinedProcess.cc  ORBPipelinedProcess.cc  PipelinedProcessFactory.cc  SuperPointPipelinedProcess.cc
Vocabulary/: .gitignore
XFeatSLAM/: .gitignore  CMakeLists.txt
XFeatSLAM/examples/Monocular/: EuRoC.yaml
XFeatSLAM/include/: Frame.h  ORBmatcher.h  System.h
XFeatSLAM/src/: Frame.cc  ORBmatcher.cc  Optimizer.cc  Tracking.cc  XFextractor.cc
scripts/: LocalMapTimeStats.txt  TrackingTimeStats.txt  debug.sh  pipelined_run_orbslam_dummy_mono_euroc.sh  pipelined_run_orbslam_mono_euroc.sh  pipelined_run_orbslam_superpoint_mono_datasets.sh  pipelined_run_orbslam_superpoint_mono_euroc.sh  run_ip_cam_superpoint.sh  run_orbslam_mono_euroc.sh  run_webcam_superpoint.sh  run_xfslam_mono_euroc.sh  run_xfslam_orb_mono_euroc.sh
